--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 </head>
 <body>
     <table>
+        <thead>
         <tr>
             <th>MESI</th>
             <th>ENTRATE</th>
             <th>USCITE</th>
         </tr>
+        </thead>
+        <tbody>
         <tr>
             <td>gennaio</td>
             <td>565</td>
@@ -49,12 +52,16 @@
                 <td>478</td>
                 <td>453</td>
         </tr>
+        </tbody>
+        <tfoot>
         <tr>
+            
             <td>//</td>
             <td>3920</td>
             <td>2930</td>
 
         </tr>
+        </tfoot>
     </table>
     
 </body>
